--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
     To view our final prototype on Figma, click below:
     <br><br>
     <a href= "https://www.figma.com/proto/Dlrr1EPIwQJjZWnDfFHSzeQD/ConnectFinal?node-id=360%3A1863&scaling=min-zoom" target="_blank">
-      <button class="vmbutton vmbutton5">View our Prototype</button>
+      <button class="vmbutton vmbutton5">View Our Prototype</button>
     </a>
     </p>
   </div>
