--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 <div class="background " style="padding-right:58px">
-  <img src ="img/header.png" style="width:100%">
+  <img src ="img/header3.png" style="width:100%">
 </div>
 
 
