--- a/index.html
+++ b/index.html
@@ -568,15 +568,28 @@
     </div>
   </div>
 
-  <div align = "center">
-    <p>
-    To view our final prototype on Figma, click below:
-    <br><br>
-    <a href= "https://www.figma.com/proto/Dlrr1EPIwQJjZWnDfFHSzeQD/ConnectFinal?node-id=360%3A1863&scaling=min-zoom" target="_blank">
-      <button class="vmbutton vmbutton5">View Our Prototype</button>
-    </a>
-    </p>
+  <center>
+  <div class="rowh">
+    <div class="columnh">
+      <p>
+      To view our final prototype on Figma, click below:
+      <br><br>
+      <a href= "https://www.figma.com/proto/Dlrr1EPIwQJjZWnDfFHSzeQD/ConnectFinal?node-id=360%3A1863&scaling=min-zoom" target="_blank">
+        <button class="vmbutton vmbutton5">View Our Prototype</button>
+      </a>
+      </p>
+    </div>
+    <div class="columnh">
+      <p>
+      To view our video prototype, click below:
+      <br><br>
+      <a href= "https://youtu.be/Fvk_mbf0biM" target="_blank">
+        <button class="vmbutton vmbutton5">View Our Prototype</button>
+      </a>
+      </p>
+    </div>
   </div>
+  </center>
 
 </div>
 
