--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   professional at no cost to them. While this is helpful, some students are hesitant to get started with counseling because
   of the social stigma associated with therapy. </p>
   <p> Campus events aim to build community between students, but when a student tends to be
-  more introverted or prefer smaller social settings these can be overwhelming an not effective. </p>
+  more introverted or prefer smaller social settings these can be overwhelming and not effective. </p>
   <p>Some campuses, like the University of Maryland, have developed apps that help students monitor their mental health through periodic
   check-ins, but these systems have the tendency to overwhelm students.</p>
 
@@ -130,7 +130,7 @@
 
 <p>In order to triangulate our data, we decided to use three methods of data collection: an initial survey, a time diary study, and de-brief
   interviews. The survey was used to help us get an initial understanding of our users’ loneliness, the time diary study showed us specific ways
-  our user’s experience loneliness, and the debrief interviews helped us unpack those specific instances and emotions. We used these three methods
+  our users experience loneliness, and the debrief interviews helped us unpack those specific instances and emotions. We used these three methods
   to get a well rounded view of how loneliness fits into and affects our users.</p>
 
 <br>
@@ -213,7 +213,7 @@
   <li>Their coping methods for loneliness</li>
   <li>Activities where they felt the least lonely</li>
   <li>Their responses to the initial screener survey questions</li>
-  <li>If there any services they wish were available for you on campus (or off campus) to help cope with loneliness</li>
+  <li>If there are any services that they wish were available to them on (or off) campus to help cope with loneliness</li>
   <li>Their response to our questions about counseling services in the initial screener survey</li>
 </ul>
 
@@ -254,18 +254,18 @@
   <li>People experience loneliness when they’re in a new situation. </li>
 </ol>
 
-<h6>“It’s difficult being in a different environment” <br>
+<h6>“It’s difficult being in a different environment.” <br>
 - U8 on their transition into graduate school</h6>
 
 <br>
 <p>Additionally, we noticed three common coping mechanisms for loneliness:</p>
 <ol>
-  <li>Watching media (netflix, hulu, youtube) to fill empty time</li>
+  <li>Watching media (netflix, hulu, youtube) to fill empty time.</li>
   <div class="w3-main" style="margin-left:200px;margin-right:200px">
-    <h6>“I have a busy schedule and when there is a lull in my day I begin to feel lonely so I like to watch hulu or youtube to fill my time” -U10</h6>
+    <h6>“I have a busy schedule and when there is a lull in my day I begin to feel lonely so I like to watch hulu or youtube to fill my time.” -U10</h6>
     <br>
   </div>
-  <li>Being busy or unproductive</li>
+  <li>Being busy or unproductive.</li>
   <div class="w3-main" style="margin-left:200px;margin-right:200px">
     <h6>"When I’m studying I don't have the mental space for loneliness.The productivity is positive and the loneliness doesn’t creep in." - U6</h6>
     <br>
@@ -306,7 +306,7 @@
 <h4>Design Ideation</h4>
 <hr style="width:27%;border:1px solid #E6C344" class="w3-round">
 
-<p>The design process began with ideation, 20 sketches were created by each team members for a total of 60 sketches. These sketches were
+<p>The design process began with ideation, 20 sketches were created by each team member for a total of 60 sketches. These sketches were
    developed based on the knowledge gained from our previous research. Below are some examples of sketches that we made as well as the sketch
    that inspired our final idea to begin prototyping. </p>
    <br><br>
