--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
     </div>
     <div class="column left">
       <video width="95%" style="float: center; margin-left: 5%; margin-bottom: 10%;" controls muted autoplay loop>
-        <source src="vid/watchpreferences.mp4" type="video/mp4">
+        <source src="vid/dashboard.mp4" type="video/mp4">
     	</video>
     </div>
   </div>
