--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
   <div class="row">
     <div class="column right">
       <h5><br><br><b>Watch Preferences</b></h5>
-      <p>Selecting a show reveals more details about the show, as well as allows user to choose how they
+      <p>Selecting a show reveals more details about the show, as well as allows users to choose how they
         want to watch their show: <i>with friends</i>, <i>with comments</i>, or <i>alone</i>.</p>
     </div>
     <div class="column left">
@@ -563,7 +563,7 @@
     </div>
     <div class="column right">
       <h5><br><br><b>While Watching</b></h5>
-      <p>When users click play, they are taken to their show with many options. The user can <i>view comments</i>, depicted by blue bubbles
+      <p>When users click play, they are taken to their show with many options. The user can <i>view comments</i>, depicted by blue bubbles,
         <i>make a comment</i> depicted by the yellow circle, <i>adjust their settings</i>, and <i>livechat</i>. </p>
     </div>
   </div>
@@ -584,7 +584,7 @@
       To view our video prototype, click below:
       <br><br>
       <a href= "https://youtu.be/Fvk_mbf0biM" target="_blank">
-        <button class="vmbutton vmbutton5">View Our Prototype</button>
+        <button class="vmbutton vmbutton5">View Our Video</button>
       </a>
       </p>
     </div>
